@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix storing X-ANNIVERSARY date in vCard format (#1488527)
 - Update to Mail_Mime-1.8.5 (#1488521)
 - Fix Shift + delete button does not permanently delete messages (#1488243)
 - Add Content-Length for attachments where possible (#1485478)
